docs: restructure README.md as comprehensive usage guide
Add environment requirements, Web UI feature tour, practical usage
scenarios (callback debugging, slow response simulation, error simulation,
stress testing), and troubleshooting section covering common startup and
connectivity issues. Restructure quick start with two clear paths.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>